--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.1.3",
+    "@angular/cdk": "^17.2.0",
     "@angular/common": "^17.1.3",
     "@angular/compiler": "^17.1.3",
     "@angular/core": "^17.1.3",
     "@angular/forms": "^17.1.3",
+    "@angular/material": "^17.2.0",
     "@angular/platform-browser": "^17.1.3",
     "@angular/platform-browser-dynamic": "^17.1.3",
     "@angular/router": "^17.1.3",
+    "@angular/ssr": "^17.2.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "i": "^0.3.7",
+    "npm": "^10.4.0",
     "rxjs": "~7.5.0",
+    "signature_pad": "^4.1.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -27,12 +35,15 @@
     "@angular/cli": "~17.1.3",
     "@angular/compiler-cli": "^17.1.3",
     "@types/jasmine": "~4.0.0",
+    "autoprefixer": "^10.4.17",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.3.3"
   }
 }
