--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/material": "^17.2.0",
     "@angular/platform-browser": "^17.1.3",
     "@angular/platform-browser-dynamic": "^17.1.3",
+    "@angular/platform-server": "^17.2.1",
     "@angular/router": "^17.1.3",
     "@angular/ssr": "^17.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "express": "^4.18.2",
     "i": "^0.3.7",
     "npm": "^10.4.0",
     "rxjs": "~7.5.0",
@@ -35,6 +37,7 @@
     "@angular/cli": "~17.1.3",
     "@angular/compiler-cli": "^17.1.3",
     "@types/jasmine": "~4.0.0",
+    "@types/express": "^4.17.17",
     "autoprefixer": "^10.4.17",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
