--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "i": "^0.3.7",
     "npm": "^10.4.0",
+    "primeng": "^17.7.0",
     "rxjs": "~7.5.0",
     "signature_pad": "^4.1.7",
     "tslib": "^2.3.0",
@@ -36,8 +37,8 @@
     "@angular-devkit/build-angular": "^17.1.3",
     "@angular/cli": "~17.1.3",
     "@angular/compiler-cli": "^17.1.3",
-    "@types/jasmine": "~4.0.0",
     "@types/express": "^4.17.17",
+    "@types/jasmine": "~4.0.0",
     "autoprefixer": "^10.4.17",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
